--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                     <h4 class="title">AI and Data Engineering Consulting
                     </h4>
                     <p class="description">Consulting in AI and Data Engineering to optimize processes, improve decision-making, and enhance technological innovation for companies..</p>
-                    <a href="service-details.html" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
+                    <a href="service-details.html?product=product-1" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
                   </div>
                 </div>
                 <!-- End Service Item -->
@@ -357,7 +357,7 @@
                     <p class="description">Personalized solutions for medium, big companies, and Fortune 500, tailored to their specific needs to achieve business success.
                     </p>
 
-                    <a href="service-details.html" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
+                    <a href="service-details.html?product=product-2" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
                   </div>
                 </div><!-- End Service Item -->
                       <div class="col-lg-4 position-relative" data-aos="zoom-out" data-aos-delay="200">
