--- a/career.html
+++ b/career.html
@@ -168,91 +168,80 @@
     </section><!-- /Services Section -->
 
     <!-- Service Cards Section -->
-    <section id="service-cards" class="service-cards section">
-
-      <div class="container">
-
-        <div class="row gy-4">
-
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <div class="card-item">
-              <div class="row">
-                <div class="col-xl-5">
-                  <div class="card-bg"><img src="assets/img/cards-1.jpg" alt=""></div>
-                </div>
-                <div class="col-xl-7 d-flex align-items-center">
-                  <div class="card-body">
-                    <h4 class="card-title">Flexible Work Environment and Collaborative Atmosphere at Ultradeeptech:
-                    </h4>
-                    <p>At Ultradeeptech, we value work-life balance. Our work environment promotes flexibility, allowing you to work from the comfort of your home or in our modern offices designed for collaboration. Enjoy adaptable schedules while collaborating with multidisciplinary teams that foster innovation and the exchange of ideas.
-
-                    </p>
-                  </div>
-                </div>
+<section id="service-cards" class="service-cards section">
+        <!-- Section Title -->
+        <div class="container section-title" data-aos="fade-up">
+          <h2>The life in Ultradeeptech</h2>
+        </div><!-- End Section Title -->
+  <div class="container">
+    <div class="row gy-4">
+      <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+        <div class="card-item h-100 d-flex flex-column">
+          <div class="row g-0 h-100">
+            <div class="col-xl-5">
+              <div class="card-bg h-100"><img src="assets/img/cards-1.jpg" class="img-fluid h-100" alt=""></div>
+            </div>
+            <div class="col-xl-7 d-flex align-items-center">
+              <div class="card-body">
+                <h4 class="card-title">Flexible Work Environment and Collaborative Atmosphere at Ultradeeptech:</h4>
+                <p>At Ultradeeptech, we value work-life balance. Our work environment promotes flexibility, allowing you to work from the comfort of your home or in our modern offices designed for collaboration. Enjoy adaptable schedules while collaborating with multidisciplinary teams that foster innovation and the exchange of ideas.</p>
               </div>
             </div>
-          </div><!-- End Card Item -->
-
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-            <div class="card-item">
-              <div class="row">
-                <div class="col-xl-5">
-                  <div class="card-bg"><img src="assets/img/cards-5.jpg" alt=""></div>
-                </div>
-                <div class="col-xl-7 d-flex align-items-center">
-                  <div class="card-body">
-                    <h4 class="card-title">Balance Between Innovation and Personal Well-being at Ultradeeptech:
-                    </h4>
-                    <p>At Ultradeeptech, innovation goes hand in hand with personal well-being. We offer an environment where you can develop groundbreaking solutions while taking care of your health and well-being. From remote work options to emotional support programs, we are committed to creating a space where you can grow professionally without compromising your quality of life.                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div><!-- End Card Item -->
-
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
-            <div class="card-item">
-              <div class="row">
-                <div class="col-xl-5">
-                  <div class="card-bg"><img src="assets/img/cards-3.jpg" alt=""></div>
-                </div>
-                <div class="col-xl-7 d-flex align-items-center">
-                  <div class="card-body">
-                    <h4 class="card-title">Culture of Continuous Learning and Professional Development at Ultradeeptech:
-                    </h4>
-                    <p>Join Ultradeeptech and immerse yourself in a culture of continuous learning. Here, you'll have access to educational resources, personalized training programs, and mentorship from industry experts. Our company is dedicated to your professional development, offering opportunities to explore new skills and advance your career within a dynamic and stimulating environment.
-
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div><!-- End Card Item -->
-
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
-            <div class="card-item">
-              <div class="row">
-                <div class="col-xl-5">
-                  <div class="card-bg"><img src="assets/img/cards-4.jpg" alt=""></div>
-                </div>
-                <div class="col-xl-7 d-flex align-items-center">
-                  <div class="card-body">
-                    <h4 class="card-title">Global Impact and Transformative Projects at Ultradeeptech:
-                    </h4>
-                    <p>At Ultradeeptech, every project has the potential for global impact. From artificial intelligence to emerging technologies, we work on transformative projects that are redefining industries and improving people's lives worldwide. Join our passionate team and contribute to innovative solutions that make a difference on a global scale.
-
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div><!-- End Card Item -->
-
+          </div>
         </div>
+      </div><!-- End Card Item -->
 
-      </div>
+      <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
+        <div class="card-item h-100 d-flex flex-column">
+          <div class="row g-0 h-100">
+            <div class="col-xl-5">
+              <div class="card-bg h-100"><img src="assets/img/cards-5.jpg" class="img-fluid h-100" alt=""></div>
+            </div>
+            <div class="col-xl-7 d-flex align-items-center">
+              <div class="card-body">
+                <h4 class="card-title">Balance Between Innovation and Personal Well-being at Ultradeeptech:</h4>
+                <p>At Ultradeeptech, innovation goes hand in hand with personal well-being. We offer an environment where you can develop groundbreaking solutions while taking care of your health and well-being. From remote work options to emotional support programs, we are committed to creating a space where you can grow professionally without compromising your quality of life.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div><!-- End Card Item -->
 
-    </section><!-- /Service Cards Section -->
+      <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
+        <div class="card-item h-100 d-flex flex-column">
+          <div class="row g-0 h-100">
+            <div class="col-xl-5">
+              <div class="card-bg h-100"><img src="assets/img/cards-3.jpg" class="img-fluid h-100" alt=""></div>
+            </div>
+            <div class="col-xl-7 d-flex align-items-center">
+              <div class="card-body">
+                <h4 class="card-title">Culture of Continuous Learning and Professional Development at Ultradeeptech:</h4>
+                <p>Join Ultradeeptech and immerse yourself in a culture of continuous learning. Here, you'll have access to educational resources, personalized training programs, and mentorship from industry experts. Our company is dedicated to your professional development, offering opportunities to explore new skills and advance your career within a dynamic and stimulating environment.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div><!-- End Card Item -->
+
+      <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
+        <div class="card-item h-100 d-flex flex-column">
+          <div class="row g-0 h-100">
+            <div class="col-xl-5">
+              <div class="card-bg h-100"><img src="assets/img/cards-4.jpg" class="img-fluid h-100" alt=""></div>
+            </div>
+            <div class="col-xl-7 d-flex align-items-center">
+              <div class="card-body">
+                <h4 class="card-title">Global Impact and Transformative Projects at Ultradeeptech:</h4>
+                <p>At Ultradeeptech, every project has the potential for global impact. From artificial intelligence to emerging technologies, we work on transformative projects that are redefining industries and improving people's lives worldwide. Join our passionate team and contribute to innovative solutions that make a difference on a global scale.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div><!-- End Card Item -->
+
+    </div>
+  </div>
+</section>
 
     <!-- Testimonials Section -->
     <section id="testimonials" class="testimonials section">
@@ -260,7 +249,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Employee Testimonials</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>¿What say the employee about us?</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
