--- a/contact.html
+++ b/contact.html
@@ -116,6 +116,74 @@
         </nav>
       </div>
     </div><!-- End Page Title -->
+    <!-- FAQ Section -->
+<section id="faq" class="faq section">
+  <div class="container" data-aos="fade-up">
+
+    <div class="section-header">
+      <h1 class="section-title">Frequently Asked Questions</h1>
+    </div>
+
+    <div class="accordion" id="faqAccordion">
+
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingOne">
+          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+            What is Ultra Deep Tech?
+          </button>
+        </h2>
+        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#faqAccordion">
+          <div class="accordion-body">
+            Ultra Deep Tech is a company specializing in AI consulting services and solutions designed to help businesses achieve their goals through innovative technologies.
+          </div>
+        </div>
+      </div>
+
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingTwo">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+            What services do you offer?
+          </button>
+        </h2>
+        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#faqAccordion">
+          <div class="accordion-body">
+            We offer a wide range of services including AI and data engineering consulting, personalized solutions for various companies, and more.
+          </div>
+        </div>
+      </div>
+
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingThree">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+            How can I contact Ultra Deep Tech?
+          </button>
+        </h2>
+        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#faqAccordion">
+          <div class="accordion-body">
+            You can contact us via phone at +54 (9) 11 76455965, or email us at contact@ultradeeptech.com. Our office is located at Corrientes 800, Ciudad Autonoma de Buenos Aires.
+          </div>
+        </div>
+      </div>
+
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingFour">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+            Where are you located?
+          </button>
+        </h2>
+        <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#faqAccordion">
+          <div class="accordion-body">
+            Our main office is located at Corrientes 800, Ciudad Autonoma de Buenos Aires, Argentina.
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+</section>
+<!-- End FAQ Section -->
+
 
     <!-- Contact Section -->
     <section id="contact" class="contact section">
