--- a/career.html
+++ b/career.html
@@ -461,6 +461,10 @@
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
 
+  <a href="https://wa.link/2ebre2" class="whatsapp-float" target="_blank">
+    <i class="bi bi-whatsapp whatsapp-icon"></i>
+</a>
+
 </body>
 
 </html>
