--- a/index.html
+++ b/index.html
@@ -485,6 +485,10 @@
   <script src="assets/js/cookies.js"></script>
   <script src="assets/js/background.js"></script>
 
+  <a href="https://wa.link/2ebre2" class="whatsapp-float" target="_blank">
+    <i class="bi bi-whatsapp whatsapp-icon"></i>
+</a>
+
 </body>
 
 </html>
