--- a/about.html
+++ b/about.html
@@ -386,6 +386,10 @@
   <script src="assets/js/cookies.js"></script>
 
 
+  <a href="https://wa.link/2ebre2" class="whatsapp-float" target="_blank">
+    <i class="bi bi-whatsapp whatsapp-icon"></i>
+</a>
+
 </body>
 
 </html>
