--- a/contact.html
+++ b/contact.html
@@ -352,6 +352,10 @@
   <script src="assets/js/main.js"></script>
   <script src="assets/js/cookies.js"></script>
 
+  <a href="https://wa.link/2ebre2" class="whatsapp-float" target="_blank">
+    <i class="bi bi-whatsapp whatsapp-icon"></i>
+</a>
+
 </body>
 
 </html>
