--- a/politics.html
+++ b/politics.html
@@ -412,6 +412,10 @@ If you have any questions about our Cookie Policy, please contact us via contact
   <script src="assets/js/main.js"></script>
   <script src="assets/js/cookies.js"></script>
 
+  
+  <a href="https://wa.link/2ebre2" class="whatsapp-float" target="_blank">
+    <i class="bi bi-whatsapp whatsapp-icon"></i>
+</a>
 
 </body>
 
