--- a/productsdetails.html
+++ b/productsdetails.html
@@ -356,6 +356,10 @@
       checkUrlForProduct();
     });
   </script>
+
+<a href="https://wa.link/2ebre2" class="whatsapp-float" target="_blank">
+  <i class="bi bi-whatsapp whatsapp-icon"></i>
+</a>
   
 
     
