--- a/service-details.html
+++ b/service-details.html
@@ -360,6 +360,10 @@
     });
   </script>
 
+
+<a href="https://wa.link/2ebre2" class="whatsapp-float" target="_blank">
+  <i class="bi bi-whatsapp whatsapp-icon"></i>
+</a>
     
 
 </body>
