--- a/contact.html
+++ b/contact.html
@@ -90,7 +90,7 @@
   
           <li class="dropdown"><a href="contact.html"><span>Contact Us</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="contact.html">Office Locations</a></li>
+              <li><a href="contact.html#mapa">Office Locations</a></li>
               <li><a href="contact.html">Support and Inquiries</a></li>
               <li><a href="contact.html">Chat with Us</a></li>
             </ul>
@@ -174,6 +174,9 @@
         <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#faqAccordion">
           <div class="accordion-body">
             Our main office is located at Corrientes 800, Ciudad Autonoma de Buenos Aires, Argentina.
+            <br><br>
+
+            <iframe  id="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.0194292984957!2d-58.37789599999999!3d-34.603670199999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccace8409c981%3A0xb8cadd77ba71d9f3!2sAv.%20Corrientes%20800%2C%20C1008%20Cdad.%20Aut%C3%B3noma%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1718907700672!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
         </div>
       </div>
@@ -352,7 +355,7 @@
   <script src="assets/js/main.js"></script>
   <script src="assets/js/cookies.js"></script>
 
-  <a href="https://wa.link/2ebre2" class="whatsapp-float" target="_blank">
+  <a href="https://wa.link/2ebre2" class="whatsapp-float" target="_blank" data-aos="fade-up">
     <i class="bi bi-whatsapp whatsapp-icon"></i>
 </a>
 
