--- a/career.html
+++ b/career.html
@@ -461,7 +461,7 @@
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
 
-  <a href="https://wa.link/2ebre2" class="whatsapp-float" target="_blank">
+  <a href="https://wa.link/2ebre2" class="whatsapp-float" target="_blank" data-aos="fade-up">
     <i class="bi bi-whatsapp whatsapp-icon"></i>
 </a>
 
