--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
   <script src="assets/js/cookies.js"></script>
   <script src="assets/js/background.js"></script>
 
-  <a href="https://wa.link/2ebre2" class="whatsapp-float" target="_blank">
+  <a href="https://wa.link/2ebre2" class="whatsapp-float" target="_blank" data-aos="fade-up">
     <i class="bi bi-whatsapp whatsapp-icon"></i>
 </a>
 
