--- a/politics.html
+++ b/politics.html
@@ -412,8 +412,8 @@ If you have any questions about our Cookie Policy, please contact us via contact
   <script src="assets/js/main.js"></script>
   <script src="assets/js/cookies.js"></script>
 
-  
-  <a href="https://wa.link/2ebre2" class="whatsapp-float" target="_blank">
+
+  <a href="https://wa.link/2ebre2" class="whatsapp-float" target="_blank" data-aos="fade-up">
     <i class="bi bi-whatsapp whatsapp-icon"></i>
 </a>
 
