--- a/productsdetails.html
+++ b/productsdetails.html
@@ -356,9 +356,8 @@
       checkUrlForProduct();
     });
   </script>
-
-<a href="https://wa.link/2ebre2" class="whatsapp-float" target="_blank">
-  <i class="bi bi-whatsapp whatsapp-icon"></i>
+  <a href="https://wa.link/2ebre2" class="whatsapp-float" target="_blank" data-aos="fade-up">
+    <i class="bi bi-whatsapp whatsapp-icon"></i>
 </a>
   
 
