--- a/service-details.html
+++ b/service-details.html
@@ -361,7 +361,7 @@
   </script>
 
 
-<a href="https://wa.link/2ebre2" class="whatsapp-float" target="_blank">
+<a href="https://wa.link/2ebre2" class="whatsapp-float" target="_blank" data-aos="fade-up">
   <i class="bi bi-whatsapp whatsapp-icon"></i>
 </a>
     
