--- a/career.html
+++ b/career.html
@@ -83,9 +83,9 @@
   
           <li class="dropdown"><a href="career.html"><span>Career</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="career.html">Current Job Openings</a></li>
-              <li><a href="career.html">Life at Ultra Deep Tech </a></li>
-              <li><a href="career.html">Employee Testimonials</a></li>
+              <li><a href="career.html#openings">Current Job Openings</a></li>
+              <li><a href="career.html#life">Life at Ultra Deep Tech </a></li>
+              <li><a href="career.html#testimonials">Employee Testimonials</a></li>
             </ul>
           </li>
   
@@ -123,7 +123,7 @@
     <section id="services" class="services section">
 
       <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
+      <div class="container section-title" data-aos="fade-up" id="openings">
         <h2>Current Job Openings</h2>
         <p>Our actually offers:</p>
       </div><!-- End Section Title -->
@@ -168,9 +168,9 @@
     </section><!-- /Services Section -->
 
     <!-- Service Cards Section -->
-<section id="service-cards" class="service-cards section">
+<section id="service-cards" class="service-cards section" >
         <!-- Section Title -->
-        <div class="container section-title" data-aos="fade-up">
+        <div class="container section-title" data-aos="fade-up" id="life">
           <h2>The life in Ultradeeptech</h2>
         </div><!-- End Section Title -->
   <div class="container">
@@ -247,7 +247,7 @@
     <section id="testimonials" class="testimonials section">
 
       <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
+      <div class="container section-title" data-aos="fade-up" id="testimonials">
         <h2>Employee Testimonials</h2>
         <p>¿What say the employee about us?</p>
       </div><!-- End Section Title -->
