--- a/contact.html
+++ b/contact.html
@@ -82,9 +82,9 @@
   
           <li class="dropdown"><a href="career.html"><span>Career</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="career.html">Current Job Openings</a></li>
-              <li><a href="career.html">Life at Ultra Deep Tech </a></li>
-              <li><a href="career.html">Employee Testimonials</a></li>
+              <li><a href="career.html#openings">Current Job Openings</a></li>
+              <li><a href="career.html#life">Life at Ultra Deep Tech </a></li>
+              <li><a href="career.html#testimonials">Employee Testimonials</a></li>
             </ul>
           </li>
   
@@ -208,8 +208,8 @@
             <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="300">
               <i class="bi bi-telephone flex-shrink-0"></i>
               <div>
-                <h3>Call Us</h3>
-                <p>+54 (9) 11 76455965</p>
+                <h3>Call o Write Us</h3>
+                <p><a href="https://wa.link/2ebre2"></a>+54 (9) 11 7645 -5965</p>
               </div>
             </div><!-- End Info Item -->
 
