--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
   
           <li class="dropdown"><a href="career.html"><span>Career</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="career.html">Current Job Openings</a></li>
-              <li><a href="career.html">Life at Ultra Deep Tech </a></li>
-              <li><a href="career.html">Employee Testimonials</a></li>
+              <li><a href="career.html#openings">Current Job Openings</a></li>
+              <li><a href="career.html#life">Life at Ultra Deep Tech </a></li>
+              <li><a href="career.html#testimonials">Employee Testimonials</a></li>
             </ul>
           </li>
   
@@ -338,8 +338,8 @@
 
               <div class="row gy-4">
       
-                <div class="col-lg-4 col-md-6 features-item d-flex" data-aos="fade-up" data-aos-delay="100">
-                  <div class="icon flex-shrink-0"><i class="bi bi-eye" style="color: #2b5e96;"></i></div>
+                <div class="col-lg-4 col-md-6 features-item d-flex" data-aos="fade-up" data-aos-delay="100" >
+                  <a href="service-details.html?product=product-1"><div class="icon flex-shrink-0"><i class="bi bi-eye" style="color: #2b5e96;"></i></div>
                   <div>
                     <h4 class="title">AI and Data Engineering Consulting
                     </h4>
@@ -350,7 +350,7 @@
                 <!-- End Service Item -->
       
                 <div class="col-lg-4 col-md-6 features-item d-flex" data-aos="fade-up" data-aos-delay="200">
-                  <div class="icon flex-shrink-0"><i class="bi bi-shield-lock" style="color: #2b5e96;"></i></div>
+                  <a href="service-details.html?product=product-2"><div class="icon flex-shrink-0"><i class="bi bi-shield-lock" style="color: #2b5e96;"></i></div>
                   <div>
                     <h4 class="title">Personalized Solutions for Medium, Big Companies, and Fortune 500
                     </h4>
