--- a/politics.html
+++ b/politics.html
@@ -84,9 +84,9 @@
   
           <li class="dropdown"><a href="career.html"><span>Career</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="career.html">Current Job Openings</a></li>
-              <li><a href="career.html">Life at Ultra Deep Tech </a></li>
-              <li><a href="career.html">Employee Testimonials</a></li>
+              <li><a href="career.html#openings">Current Job Openings</a></li>
+              <li><a href="career.html#life">Life at Ultra Deep Tech </a></li>
+              <li><a href="career.html#testimonials">Employee Testimonials</a></li>
             </ul>
           </li>
   
