--- a/career.html
+++ b/career.html
@@ -92,7 +92,7 @@
           <li class="dropdown"><a href="contact.html"><span>Contact Us</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="contact.html">Office Locations</a></li>
-              <li><a href="contact.html">Support and Inquiries</a></li>
+              <li><a href="contact.html">FAQ's</a></li>
               <li><a href="contact.html">Chat with Us</a></li>
             </ul>
           </li>
@@ -125,40 +125,23 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up" id="openings">
         <h2>Current Job Openings</h2>
-        <p>Our actually offers:</p>
       </div><!-- End Section Title -->
 
       <div class="container">
 
         <div class="row gy-4">
 
-          <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-12 col-md-12 service-item d-flex text" data-aos="fade-up" data-aos-delay="100">
             <div class="icon flex-shrink-0"><i class="bi bi-briefcase" ></i></div>
             <div>
-              <h4 class="title">Advisor</h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+              <h4 class="title">See our complete offers in Linked In</h4>
+              <p class="description">Discover top job opportunities on our LinkedIn! Follow us here for daily updates and exclusive openings.</p>
               <a href="#" class="readmore stretched-link"><span>See in Linked In</span><i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
           <!-- End Service Item -->
 
-          <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="200">
-            <div class="icon flex-shrink-0"><i class="bi bi-briefcase" ></i></div>
-            <div>
-              <h4 class="title">Advisor</h4>
-              <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
-              <a href="#" class="readmore stretched-link"><span>See in Linked In</span><i class="bi bi-arrow-right"></i></a>
-            </div>
-          </div><!-- End Service Item -->
 
-          <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="300">
-            <div class="icon flex-shrink-0"><i class="bi bi-briefcase" ></i></div>
-            <div>
-              <h4 class="title">Advisor</h4>
-              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
-              <a href="#" class="readmore stretched-link"><span>See in Linked In</span><i class="bi bi-arrow-right"></i></a>
-            </div>
-          </div><!-- End Service Item -->
 
 
         </div>
@@ -167,210 +150,133 @@
 
     </section><!-- /Services Section -->
 
-    <!-- Service Cards Section -->
-<section id="service-cards" class="service-cards section" >
-        <!-- Section Title -->
-        <div class="container section-title" data-aos="fade-up" id="life">
-          <h2>The life in Ultradeeptech</h2>
-        </div><!-- End Section Title -->
+<!-- Core Values Section -->
+
+<section id="core-values" class="core-values section bg-light">
   <div class="container">
-    <div class="row gy-4">
-      <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-        <div class="card-item h-100 d-flex flex-column">
-          <div class="row g-0 h-100">
-            <div class="col-xl-5">
-              <div class="card-bg h-100"><img src="assets/img/cards-1.jpg" class="img-fluid h-100" alt=""></div>
-            </div>
-            <div class="col-xl-7 d-flex align-items-center">
-              <div class="card-body">
-                <h4 class="card-title">Flexible Work Environment and Collaborative Atmosphere at Ultradeeptech:</h4>
-                <p>At Ultradeeptech, we value work-life balance. Our work environment promotes flexibility, allowing you to work from the comfort of your home or in our modern offices designed for collaboration. Enjoy adaptable schedules while collaborating with multidisciplinary teams that foster innovation and the exchange of ideas.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div><!-- End Card Item -->
+          <!-- Section Title -->
+          <div class="container section-title" data-aos="fade-up" id="openings">
+            <h2>Core Values</h2>
+            <p>Our guiding principles that drive our actions and decisions.</p>
 
-      <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-        <div class="card-item h-100 d-flex flex-column">
-          <div class="row g-0 h-100">
-            <div class="col-xl-5">
-              <div class="card-bg h-100"><img src="assets/img/cards-5.jpg" class="img-fluid h-100" alt=""></div>
-            </div>
-            <div class="col-xl-7 d-flex align-items-center">
-              <div class="card-body">
-                <h4 class="card-title">Balance Between Innovation and Personal Well-being at Ultradeeptech:</h4>
-                <p>At Ultradeeptech, innovation goes hand in hand with personal well-being. We offer an environment where you can develop groundbreaking solutions while taking care of your health and well-being. From remote work options to emotional support programs, we are committed to creating a space where you can grow professionally without compromising your quality of life.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div><!-- End Card Item -->
+          </div><!-- End Section Title -->
+    <div class="row row-cols-1 row-cols-md-3 gy-4">
 
-      <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
-        <div class="card-item h-100 d-flex flex-column">
-          <div class="row g-0 h-100">
-            <div class="col-xl-5">
-              <div class="card-bg h-100"><img src="assets/img/cards-3.jpg" class="img-fluid h-100" alt=""></div>
-            </div>
-            <div class="col-xl-7 d-flex align-items-center">
-              <div class="card-body">
-                <h4 class="card-title">Culture of Continuous Learning and Professional Development at Ultradeeptech:</h4>
-                <p>Join Ultradeeptech and immerse yourself in a culture of continuous learning. Here, you'll have access to educational resources, personalized training programs, and mentorship from industry experts. Our company is dedicated to your professional development, offering opportunities to explore new skills and advance your career within a dynamic and stimulating environment.</p>
-              </div>
-            </div>
+      <!-- Core Value: Excellence -->
+      <div class="col" data-aos="fade-up" data-aos-delay="200">
+        <div class="card h-100 tech-card">
+          <div class="card-body">
+            <h5 class="card-title">Excellence</h5>
+            <p class="card-text">Strive for the highest standards in all tasks.</p>
           </div>
         </div>
-      </div><!-- End Card Item -->
+      </div><!-- End Core Value: Excellence -->
 
-      <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
-        <div class="card-item h-100 d-flex flex-column">
-          <div class="row g-0 h-100">
-            <div class="col-xl-5">
-              <div class="card-bg h-100"><img src="assets/img/cards-4.jpg" class="img-fluid h-100" alt=""></div>
-            </div>
-            <div class="col-xl-7 d-flex align-items-center">
-              <div class="card-body">
-                <h4 class="card-title">Global Impact and Transformative Projects at Ultradeeptech:</h4>
-                <p>At Ultradeeptech, every project has the potential for global impact. From artificial intelligence to emerging technologies, we work on transformative projects that are redefining industries and improving people's lives worldwide. Join our passionate team and contribute to innovative solutions that make a difference on a global scale.</p>
-              </div>
-            </div>
+      <!-- Core Value: Passion -->
+      <div class="col" data-aos="fade-up" data-aos-delay="300">
+        <div class="card h-100 tech-card">
+          <div class="card-body">
+            <h5 class="card-title">Passion</h5>
+            <p class="card-text">Work with enthusiasm and dedication.</p>
           </div>
         </div>
-      </div><!-- End Card Item -->
+      </div><!-- End Core Value: Passion -->
+
+      <!-- Core Value: Avant-garde and Cutting Edge -->
+      <div class="col" data-aos="fade-up" data-aos-delay="400">
+        <div class="card h-100 tech-card">
+          <div class="card-body">
+            <h5 class="card-title">Avant-garde and Cutting Edge</h5>
+            <p class="card-text">Embrace innovative and forward-thinking approaches.</p>
+          </div>
+        </div>
+      </div><!-- End Core Value: Avant-garde and Cutting Edge -->
+
+      <!-- Core Value: Hard-Working -->
+      <div class="col" data-aos="fade-up" data-aos-delay="500">
+        <div class="card h-100 tech-card">
+          <div class="card-body">
+            <h5 class="card-title">Hard-Working</h5>
+            <p class="card-text">Put in the effort to achieve exceptional results.</p>
+          </div>
+        </div>
+      </div><!-- End Core Value: Hard-Working -->
+
+      <!-- Core Value: Result-Oriented -->
+      <div class="col" data-aos="fade-up" data-aos-delay="600">
+        <div class="card h-100 tech-card">
+          <div class="card-body">
+            <h5 class="card-title">Result-Oriented</h5>
+            <p class="card-text">Focus on achieving measurable outcomes.</p>
+          </div>
+        </div>
+      </div><!-- End Core Value: Result-Oriented -->
+
+      <!-- Core Value: Overcoming Expectations -->
+      <div class="col" data-aos="fade-up" data-aos-delay="700">
+        <div class="card h-100 tech-card">
+          <div class="card-body">
+            <h5 class="card-title">Overcoming Expectations</h5>
+            <p class="card-text">Go beyond the anticipated results.</p>
+          </div>
+        </div>
+      </div><!-- End Core Value: Overcoming Expectations -->
+
+      <!-- Core Value: Changing the World -->
+      <div class="col" data-aos="fade-up" data-aos-delay="800">
+        <div class="card h-100 tech-card">
+          <div class="card-body">
+            <h5 class="card-title">Changing the World</h5>
+            <p class="card-text">Contribute to meaningful and impactful projects.</p>
+          </div>
+        </div>
+      </div><!-- End Core Value: Changing the World -->
+
+      <!-- Core Value: Agency and Ownership -->
+      <div class="col" data-aos="fade-up" data-aos-delay="900">
+        <div class="card h-100 tech-card">
+          <div class="card-body">
+            <h5 class="card-title">Agency and Ownership</h5>
+            <p class="card-text">Take initiative and responsibility for your work.</p>
+          </div>
+        </div>
+      </div><!-- End Core Value: Agency and Ownership -->
+
+      <!-- Core Value: Transparent Communication and Integrity -->
+      <div class="col" data-aos="fade-up" data-aos-delay="1000">
+        <div class="card h-100 tech-card">
+          <div class="card-body">
+            <h5 class="card-title">Transparent Communication and Integrity</h5>
+            <p class="card-text">Communicate openly and act with honesty.</p>
+          </div>
+        </div>
+      </div><!-- End Core Value: Transparent Communication and Integrity -->
+
+      <!-- Core Value: Good Organization -->
+      <div class="col" data-aos="fade-up" data-aos-delay="1100">
+        <div class="card h-100 tech-card">
+          <div class="card-body">
+            <h5 class="card-title">Good Organization</h5>
+            <p class="card-text">Maintain a structured and efficient work environment.</p>
+          </div>
+        </div>
+      </div><!-- End Core Value: Good Organization -->
+
+      <!-- Core Value: Can-Do Attitude -->
+      <div class="col" data-aos="fade-up" data-aos-delay="1200">
+        <div class="card h-100 tech-card">
+          <div class="card-body">
+            <h5 class="card-title">Can-Do Attitude</h5>
+            <p class="card-text">Approach challenges with optimism and determination.</p>
+          </div>
+        </div>
+      </div><!-- End Core Value: Can-Do Attitude -->
 
     </div>
   </div>
-</section>
+</section><!-- End Core Values Section -->
 
-    <!-- Testimonials Section -->
-    <section id="testimonials" class="testimonials section">
 
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up" id="testimonials">
-        <h2>Employee Testimonials</h2>
-        <p>¿What say the employee about us?</p>
-      </div><!-- End Section Title -->
-
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
-
-        <div class="swiper">
-          <script type="application/json" class="swiper-config">
-            {
-              "loop": true,
-              "speed": 600,
-              "autoplay": {
-                "delay": 5000
-              },
-              "slidesPerView": "auto",
-              "pagination": {
-                "el": ".swiper-pagination",
-                "type": "bullets",
-                "clickable": true
-              },
-              "breakpoints": {
-                "320": {
-                  "slidesPerView": 1,
-                  "spaceBetween": 40
-                },
-                "1200": {
-                  "slidesPerView": 3,
-                  "spaceBetween": 1
-                }
-              }
-            }
-          </script>
-          <div class="swiper-wrapper">
-
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <div class="stars">
-                  <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
-                </div>
-                <p>
-                  "Working at Ultradeeptech has been an incredibly enriching experience. The flexibility to work from home or in the office has been crucial for my personal balance. I love how we can effectively collaborate on innovative projects, thanks to an environment that fosters creativity and idea exchange."
-                </p>
-                <div class="profile mt-auto">
-                  <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                  <h3>Michael Douglas</h3>
-                  <h4>Marketing Specialist</h4>
-                </div>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <div class="stars">
-                  <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
-                </div>
-                <p>
-                  "At Ultradeeptech, they truly care about our well-being. The ability to work remotely has been essential for me, allowing me to manage my time effectively and focus on both my career and personal life. Moreover, the emotional support programs are a real backbone that makes a difference."
-
-                </p>
-                <div class="profile mt-auto">
-                  <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                  <h3>Sara Wilsson</h3>
-                  <h4>Software Engineer</h4>
-                </div>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <div class="stars">
-                  <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
-                </div>
-                <p>
-                  "Since joining Ultradeeptech, I've had access to an incredible amount of learning resources. Personalized training programs and mentorship from industry experts have significantly accelerated my professional growth. I'm constantly motivated to explore new skills and advance in my career here."
-
-                </p>
-                <div class="profile mt-auto">
-                  <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                  <h3>Emily Davis</h3>
-                  <h4>Data Scientist</h4>
-                </div>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <div class="stars">
-                  <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
-                </div>
-                <p>
-                  "Being involved in projects at Ultradeeptech is a truly rewarding experience. Every day, we work on solutions that have a real global impact. From artificial intelligence to emerging technologies, our work is shaping industries and improving lives worldwide. It's an honor to be part of a team that is changing the future."
-                </p>
-                <div class="profile mt-auto">
-                  <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-                  <h3>James Carter</h3>
-                  <h4>Project Manager</h4>
-                </div>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <div class="stars">
-                  <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
-                </div>
-                <p>
-                  "The culture at Ultradeeptech is simply inspiring. We're not only focused on innovation and professional success but also on personal care and balance. Knowing that my work contributes to projects that make a global difference motivates me every day. It's a place where you can truly grow both personally and professionally."
-                </p>
-                <div class="profile mt-auto">
-                  <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-                  <h3>Oliver Larson</h3>
-                  <h4>Programmer</h4>
-                </div>
-              </div>
-            </div><!-- End testimonial item -->
-
-          </div>
-          <div class="swiper-pagination"></div>
-        </div>
-
-      </div>
-
-    </section><!-- /Testimonials Section -->
 
   </main>
 
