--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Ultra Deep Tech</title>
-  <meta content="Incorporating intelligent automated solutions to help new businesses be more valuable.
+  <meta content="Incorporating intelligent automated solutions to help  businesses be more valuable.
   " name="description">
   <meta content="" name="keywords">
 
@@ -79,23 +79,21 @@
             <ul>
               <li><a href="service-details.html?product=product-1">AI and Data Engineering Consulting</a></li>
               <li><a href="service-details.html?product=product-2">Personalized Solutions for Medium, Big Companies, and Fortune 500</a></li>
-              <li><a href="service-details.html">Case Studies and Client Testimonials</a></li>
-              <li><a href="service-details.html">Service Packages and Pricing</a></li>
+              <li><a href="service-details.html#case-studies">Case Studies and Client Testimonials</a></li>
             </ul>
           </li>
   
           <li class="dropdown"><a href="career.html"><span>Career</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="career.html#openings">Current Job Openings</a></li>
-              <li><a href="career.html#life">Life at Ultra Deep Tech </a></li>
-              <li><a href="career.html#testimonials">Employee Testimonials</a></li>
+              <li><a href="career.html#life">Core Values </a></li>
             </ul>
           </li>
   
           <li class="dropdown"><a href="contact.html"><span>Contact Us</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="contact.html">Office Locations</a></li>
-              <li><a href="contact.html">Support and Inquiries</a></li>
+              <li><a href="contact.html">FAQ's</a></li>
               <li><a href="contact.html">Chat with Us</a></li>
             </ul>
           </li>
@@ -119,7 +117,7 @@
           <div class="col-xl-7">
             <h1 data-aos="fade-up " id="typewriter-title"></h1>
             <blockquote data-aos="fade-up" data-aos-delay="100">
-              <p id="typewriter-drescription">Incorporating intelligent automated solutions to help new businesses be more valuable.</p>
+              <p id="typewriter-drescription">Incorporating intelligent automated solutions to help businesses be more valuable.</p>
             </blockquote>
             <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
               <a href="#why-us" class="btn-get-started">Get Started</a>
@@ -318,7 +316,7 @@
             <div class="text-center">
               <h3>Ready to Transform Your AI Capabilities?</h3>
               <p>Contact us today to learn more about how our advanced AI solutions can help your business achieve new heights of performance, security, and innovation. Don't miss out on the opportunity to stay ahead in the rapidly evolving world of AI.</p>
-              <a class="cta-btn" href="contact.html">Write Us</a>
+              <a class="cta-btn" href="contact.html">Contact Us</a>
             </div>
           </div>
         </div>
