--- a/contact.html
+++ b/contact.html
@@ -41,11 +41,12 @@
 
 <body class="contact-page">
 
+
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
   
-      <a href="index.html" class="logo d-flex align-items-center imagenlogo">
-        <img src="assets/img/favicon.png" class="imagenlogo-img" alt="">
+      <a href="index.html" class="logo d-flex align-items-center">
+        <img src="assets/img/favicon.png" alt="" class="logo-img">
         <h1 class="sitename">Ultra Deep Tech</h1>
     </a>
   
@@ -62,37 +63,35 @@
           </li>
           <li class="dropdown"><a href="productsdetails.html"><span>Products & Solutions</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="productsdetails.html#product-1">Interpretability</a></li>
-              <li><a href="productsdetails.html#product-2">Anonymization</a></li>
-              <li><a href="productsdetails.html#product-3">Compression</a></li>
-              <li><a href="productsdetails.html#product-4">Benchmarking</a></li>
-              <li><a href="productsdetails.html#product-5">GenAI Safety</a></li>
-              <li><a href="productsdetails.html#product-6">Evolving Threat Management</a></li>
-              <li><a href="productsdetails.html#product-7">Algorithmic Protection</a></li>
+              <li><a href="productsdetails.html?product=product-1">Interpretability</a></li>
+              <li><a href="productsdetails.html?product=product-2">Anonymization</a></li>
+              <li><a href="productsdetails.html?product=product-3">Compression</a></li>
+              <li><a href="productsdetails.html?product=product-4">Benchmarking</a></li>
+              <li><a href="productsdetails.html?product=product-5">GenAI Safety</a></li>
+              <li><a href="productsdetails.html?product=product-6">Evolving Threat Management</a></li>
+              <li><a href="productsdetails.html?product=product-7">Algorithmic Protection</a></li>
             </ul>
           </li>
           <li class="dropdown"><a href="service-details.html"><span>Services</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="service-details.html#service-1">AI and Data Engineering Consulting</a></li>
-              <li><a href="service-details.html#service-2">Personalized Solutions for Medium, Big Companies, and Fortune 500</a></li>
-              <li><a href="service-details.html">Case Studies and Client Testimonials</a></li>
-              <li><a href="service-details.html">Service Packages and Pricing</a></li>
+              <li><a href="service-details.html?product=product-1">AI and Data Engineering Consulting</a></li>
+              <li><a href="service-details.html?product=product-2">Personalized Solutions for Medium, Big Companies, and Fortune 500</a></li>
+              <li><a href="service-details.html#case-studies">Case Studies and Client Testimonials</a></li>
             </ul>
           </li>
   
           <li class="dropdown"><a href="career.html"><span>Career</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="career.html#openings">Current Job Openings</a></li>
-              <li><a href="career.html#life">Life at Ultra Deep Tech </a></li>
-              <li><a href="career.html#testimonials">Employee Testimonials</a></li>
+              <li><a href="career.html#core-values">Core Values </a></li>
             </ul>
           </li>
   
           <li class="dropdown"><a href="contact.html"><span>Contact Us</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
+              <li><a href="contact.html#faqs">FAQ's</a></li>
               <li><a href="contact.html#mapa">Office Locations</a></li>
-              <li><a href="contact.html">Support and Inquiries</a></li>
-              <li><a href="contact.html">Chat with Us</a></li>
+              <li><a href="contact.html#contact">Chat with Us</a></li>
             </ul>
           </li>
         </ul>
@@ -121,7 +120,7 @@
   <div class="container" data-aos="fade-up">
 
     <div class="section-header">
-      <h1 class="section-title">Frequently Asked Questions</h1>
+      <h1 class="section-title" id="faqs">FAQ's</h1>
     </div>
 
     <div class="accordion" id="faqAccordion">
@@ -176,7 +175,6 @@
             Our main office is located at Corrientes 800, Ciudad Autonoma de Buenos Aires, Argentina.
             <br><br>
 
-            <iframe  id="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.0194292984957!2d-58.37789599999999!3d-34.603670199999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccace8409c981%3A0xb8cadd77ba71d9f3!2sAv.%20Corrientes%20800%2C%20C1008%20Cdad.%20Aut%C3%B3noma%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1718907700672!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
         </div>
       </div>
@@ -187,6 +185,10 @@
 </section>
 <!-- End FAQ Section -->
 
+  <div id="maa">
+    <iframe  id="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.0194292984957!2d-58.37789599999999!3d-34.603670199999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccace8409c981%3A0xb8cadd77ba71d9f3!2sAv.%20Corrientes%20800%2C%20C1008%20Cdad.%20Aut%C3%B3noma%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1718907700672!5m2!1ses-419!2sar" width="100%" height="200px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  </div >         
+ 
 
     <!-- Contact Section -->
     <section id="contact" class="contact section">
@@ -222,6 +224,11 @@
             </div><!-- End Info Item -->
 
           </div>
+
+
+
+
+
 
           <div class="col-lg-7">
             <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="500">
@@ -271,7 +278,7 @@
         <div class="row gy-4">
           <div class="col-lg-5 col-md-12 footer-about">
             <a href="index.html" class="logo d-flex align-items-center">
-              <span class="sitename">Ultra Deep Tech</span>
+              <span class="sitename2">Ultra Deep Tech</span>
             </a>
             <p>At Ultra Deep Tech, we offer AI consulting services and solutions that will help you reach your business goals faster. Our service also provides an increased focus on infusing data and enables clients to generate higher value from their digital transformation initiatives.
               .</p>
@@ -319,7 +326,7 @@
     </div>
 
     <div class="container copyright text-center">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename" style="color: #2b5e96;">Ultra Deep Tech</strong> <span>All Rights Reserved</span></p>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename2" style="color: #2b5e96;">Ultra Deep Tech</strong> <span>All Rights Reserved</span></p>
       <div class="credits">
         Designed by <a href="https://www.linkedin.com/in/maximilianoeacri/" target="_blank">Maximiliano Acri</a>
       </div>
