--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
   
       <a href="index.html" class="logo d-flex align-items-center">
-        <img src="assets/img/favicon.png" alt="">
+        <img src="assets/img/favicon.png" alt="" class="logo-img">
         <h1 class="sitename">Ultra Deep Tech</h1>
-      </a>
+    </a>
   
       <nav id="navmenu" class="navmenu">
         <ul>
@@ -86,15 +86,15 @@
           <li class="dropdown"><a href="career.html"><span>Career</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="career.html#openings">Current Job Openings</a></li>
-              <li><a href="career.html#life">Core Values </a></li>
+              <li><a href="career.html#core-values">Core Values </a></li>
             </ul>
           </li>
   
           <li class="dropdown"><a href="contact.html"><span>Contact Us</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="contact.html">Office Locations</a></li>
-              <li><a href="contact.html">FAQ's</a></li>
-              <li><a href="contact.html">Chat with Us</a></li>
+              <li><a href="contact.html#faqs">FAQ's</a></li>
+              <li><a href="contact.html#mapa">Office Locations</a></li>
+              <li><a href="contact.html#contact">Chat with Us</a></li>
             </ul>
           </li>
         </ul>
@@ -392,7 +392,7 @@
         <div class="row gy-4">
           <div class="col-lg-5 col-md-12 footer-about">
             <a href="index.html" class="logo d-flex align-items-center">
-              <span class="sitename">Ultra Deep Tech</span>
+              <span class="sitename2">Ultra Deep Tech</span>
             </a>
             <p>At Ultra Deep Tech, we offer AI consulting services and solutions that will help you reach your business goals faster. Our service also provides an increased focus on infusing data and enables clients to generate higher value from their digital transformation initiatives.
               .</p>
@@ -440,7 +440,7 @@
     </div>
 
     <div class="container copyright text-center">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename" style="color: #2b5e96;">Ultra Deep Tech</strong> <span>All Rights Reserved</span></p>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename2" style="color: #2b5e96;">Ultra Deep Tech</strong> <span>All Rights Reserved</span></p>
       <div class="credits">
         Designed by <a href="https://www.linkedin.com/in/maximilianoeacri/" target="_blank">Maximiliano Acri</a>
       </div>
