--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <li class="dropdown"><a href="career.html"><span>Career</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="career.html#openings">Current Job Openings</a></li>
-              <li><a href="career.html#core-values">Core Values </a></li>
+              <li><a href="career.html#">Core Values </a></li>
             </ul>
           </li>
   
@@ -440,7 +440,7 @@
     </div>
 
     <div class="container copyright text-center">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename2" style="color: #2b5e96;">Ultra Deep Tech</strong> <span>All Rights Reserved</span></p>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename2" style="color: #26498a;">Ultra Deep Tech</strong> <span>All Rights Reserved</span></p>
       <div class="credits">
         Designed by <a href="https://www.linkedin.com/in/maximilianoeacri/" target="_blank">Maximiliano Acri</a>
       </div>
