--- a/career.html
+++ b/career.html
@@ -134,7 +134,7 @@
             <div>
               <h4 class="title">See our complete offers in Linked In</h4>
               <p class="description">Discover top job opportunities on our LinkedIn! Follow us here for daily updates and exclusive openings.</p>
-              <a href="#" class="readmore stretched-link"><span>See in Linked In</span><i class="bi bi-arrow-right"></i></a>
+              <a href="https://www.linkedin.com/company/ultra-deep-tech/jobs/" class="readmore stretched-link"><span>See in Linked In</span><i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
           <!-- End Service Item -->
