--- a/about.html
+++ b/about.html
@@ -255,7 +255,7 @@
                 <div class="member-img">
                   <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
                   <div class="social">
-                    <a href=""><i class="bi bi-linkedin"></i></a>
+                 <!--   <a href=""><i class="bi bi-linkedin"></i></a> -->
                   </div>
                 </div>
                 <div class="member-info">
@@ -270,7 +270,7 @@
                 <div class="member-img">
                   <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="">
                   <div class="social">
-                    <a href=""><i class="bi bi-linkedin"></i></a>
+<!--   <a href=""><i class="bi bi-linkedin"></i></a> -->
                   </div>
                 </div>
                 <div class="member-info">
