--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           <div class="col-xl-7">
             <h1 data-aos="fade-up " id="typewriter-title"></h1>
             <blockquote data-aos="fade-up" data-aos-delay="100">
-              <p id="typewriter-drescription">Incorporating intelligent automated solutions to help businesses be more valuable.</p>
+              <p id="typewriter-drescription">Incorporating artificial intelligence and automated solutions to help businesses be more valuable.</p>
             </blockquote>
             <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
               <a href="#why-us" class="btn-get-started">Get Started</a>
