--- a/about.html
+++ b/about.html
@@ -270,8 +270,7 @@
                 <div class="member-img">
                   <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="">
                   <div class="social">
-<!--   <a href=""><i class="bi bi-linkedin"></i></a> -->
-                  </div>
+<!--   <a href=""><i class="bi bi-linkedin"></i></a> -->                  </div>
                 </div>
                 <div class="member-info">
                   <h4>Micaela Freedman</h4>
