--- a/contact.html
+++ b/contact.html
@@ -210,7 +210,7 @@
             <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="300">
               <i class="bi bi-telephone flex-shrink-0"></i>
               <div>
-                <h3>Call o Write Us</h3>
+                <h3>Call or Text Us</h3>
                 <p><a href="https://wa.link/2ebre2"></a>+54 (9) 11 7645 -5965</p>
               </div>
             </div><!-- End Info Item -->
