--- a/contact.html
+++ b/contact.html
@@ -246,9 +246,9 @@
                         <textarea class="form-control" name="message" rows="6" placeholder="Message" required></textarea>
                     </div>
                     <div class="col-md-12 text-center">
-                        <div id="loading" class="loading" style="display: none;">Loading</div>
-                        <div id="error-message" class="error-message" style="display: none;"></div>
-                        <div id="sent-message" class="sent-message" style="display: none;">Your message has been sent. Thank you!</div>
+                        <div class="loading" style="display: none;">Loading...</div>
+                        <div class="error-message" style="display: none;"></div>
+                        <div class="sent-message" style="display: none;">Your message has been sent. Thank you!</div>
                         <button type="submit">Send Message</button>
                     </div>
                 </div>
