--- a/politics.html
+++ b/politics.html
@@ -332,6 +332,7 @@ If you have any questions about our Cookie Policy, please contact us via contact
             <div class="social-links d-flex mt-4">
               <a href="https://www.instagram.com/ultradeeptech/" target="_blank"><i class="bi bi-instagram"></i></a>
               <a href="https://www.linkedin.com/company/ultra-deep-tech/" target="_blank"><i class="bi bi-linkedin"></i></a>
+              <a href="https://www.youtube.com/channel/UCivpA1Q4U8Y09Kvp1_j5QRg" target="_blank"><i class="bi bi-youtube"></i></a>
             </div>
           </div>
 
@@ -380,6 +381,7 @@ If you have any questions about our Cookie Policy, please contact us via contact
     </div>
 
   </footer>
+  
   <div id="cookie-banner" class="cookie-banner" style="display: none;">
     <p>This website uses cookies to enhance your user experience. By continuing to browse, you agree to our <a href="politics.html#cookie">Cookie Policy</a>.<br> You can adjust your browser settings to manage or disable cookies.</p>
     <button id="accept-cookies">Accept</button>
